# simpar_cli

./: PYPROJECT.TOML  README.md  pyproject.toml  setup.cfg  setup.py  simpar.py
.github/workflows/: python-publish.yml
simpar_cli/: main.py  simpar.py
src/: cli.py  simpar.py
src/simpar_cli.egg-info/: PKG-INFO
