[metadata]
name = simpar-cli
version = 0.0.1
author = Darix SAMANI
author_email = samandarix@gmail.com
description = simple cli for paragraphe recognition
long_description = file: README.md
long_description_content_type = text/markdown
url = github/darixsamani/simpar-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True